package com.pms.agile.entity;

/** Column of the board an item currently sits in. */
public enum BacklogItemStatus {
    TODO,
    IN_PROGRESS,
    DONE
}
