package com.pms.agile.entity;

/** Relative ordering of a backlog item. */
public enum BacklogPriority {
    LOW,
    MEDIUM,
    HIGH,
    CRITICAL
}
