package com.pms.agile.entity;

/** Lifecycle of a sprint. Values are persisted as strings. */
public enum SprintStatus {
    PLANNED,
    ACTIVE,
    CLOSED
}
