@startuml class_agile
title Classes — Agile Planning (product backlog and sprints)

top to bottom direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 90
skinparam ranksep 80
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam enum {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              15
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1.4
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   12
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        11
hide circle
hide empty methods

class Project {
  - code : String
  - name : String
}

class Sprint {
  - name : String
  - goal : String
  - startDate : LocalDate
  - endDate : LocalDate
  - status : SprintStatus
}

class BacklogItem {
  - title : String
  - description : String
  - priority : BacklogPriority
  - estimateDays : BigDecimal
  - status : BacklogItemStatus
}

class User {
  - lastName : String
  - firstName : String
  - email : String
}

enum SprintStatus {
  PLANNED
  ACTIVE
  CLOSED
}

enum BacklogPriority {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum BacklogItemStatus {
  TODO
  IN_PROGRESS
  DONE
}

Project "1" *-- "0..*" Sprint      : plans
Project "1" *-- "0..*" BacklogItem : owns
Sprint  "0..1" o-- "0..*" BacklogItem : commits
BacklogItem "0..*" -- "0..1" User : assigned to
Sprint      .right.> SprintStatus
BacklogItem .right.> BacklogItemStatus
BacklogItem .down.>  BacklogPriority

note bottom of BacklogItem
  A null sprint means the item is still in
  the product backlog; a null assignee means
  nobody has picked the item up yet.
  The assignee must belong to the project team.
end note

note top of Sprint
  Aggregation: deleting a sprint
  returns its items to the backlog.
end note

@enduml
